feat(Login react+vite): :sparkles: Login front end terminado
Front end terminado a la espera de endpoints para validacion de datos

--- a/login/src/FullPage.css
+++ b/login/src/FullPage.css
@@ -1,17 +1,10 @@
-.images{
-    display: flex;
-    
-}
-.form{
-    background-image: url(assets/images/fondo-login.jpg);
+.image{
+    background-image: url(assets/images/fondo-general.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center ;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 80vh ;
-    min-width: 50vh;
-    border-radius: 50px;
 
 }
