--- a/login/src/index.css
+++ b/login/src/index.css
@@ -29,11 +29,19 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url(assets/images/fondo-general.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  background-color: rgba(119, 136, 153, 0.5) ;
 }
 
 button {
